--- a/frontend/src/Components/Chat/Chat.module.css
+++ b/frontend/src/Components/Chat/Chat.module.css
@@ -13,6 +13,27 @@
   width: 80%;
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+
+.newChat {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  outline: none;
+  background: white;
+  border: 2px solid rgb(0, 131, 224);
+  cursor: pointer;
+  color: rgb(0, 131, 224);
+  padding: 10px 20px;
+  border-radius: 15px;
+  font-size: 15px;
+}
+
+.newChat:hover {
+  background: rgb(0, 131, 224);
+  border: 2px solid rgb(0, 131, 224);
+  color: white;
 }
 
 .chatMessages {
@@ -38,7 +59,7 @@
 
 .user {
   align-self: flex-end;
-  background-color: #007bff;
+  background-color: #b5d8e5;
   color: white;
 }
 
@@ -90,5 +111,15 @@ textarea {
   height: 40px;
   display: flex;
   align-items: center;
+  cursor: pointer;
+}
+
+.deleteButton {
+  background-color: #ff6e6e;
+  color: white;
+  border: none;
+  border-radius: 10px;
+  height: 40px;
+  padding: 0px 16px;
   cursor: pointer;
 }
