--- a/frontend/src/Components/Display/Display.module.css
+++ b/frontend/src/Components/Display/Display.module.css
@@ -9,7 +9,8 @@
 .contentcontainer {
   overflow-y: auto;
   height: 90%;
-  padding-top: 20px;
+  margin-top: 20px;
+  width: 90%;
 }
 
 .query {
@@ -21,17 +22,22 @@
 }
 
 .keyword {
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px;
   color: #282b2e;
   background-color: beige;
   border-radius: 30px 30px 30px 0;
   padding: 20px;
   font-family: Garamond, serif;
+  overflow: scroll;
 }
 
 .item {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   flex-direction: column;
   color: #282b2e;
   background-color: beige;
@@ -39,6 +45,7 @@
 
 .item h1 {
   margin-top: 0px;
+  font-size: 16px;
 }
 
 .item img {
@@ -46,6 +53,12 @@
   width: 200px;
   object-fit: cover;
   border-radius: 10px 30px 30px 0;
+  cursor: pointer;
+}
+
+.item img:hover {
+  transform: scale(1.03);
+  transition: transform 0.1s ease-in-out;
 }
 
 .controls {
@@ -62,15 +75,6 @@
   color: #282b2e;
   font-family: Garamond, serif;
   margin: 0;
-}
-
-.showbutton {
-  padding: 10px 20px;
-  background-color: #007bff;
-  color: white;
-  border: none;
-  cursor: pointer;
-  border-radius: 30px 0 30px 0;
 }
 
 .logo {
@@ -119,6 +123,7 @@
   border-radius: 8px;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
+  width: 100%;
 }
 
 .button1:hover {
