--- a/frontend/src/Components/Chat/Chat.module.css
+++ b/frontend/src/Components/Chat/Chat.module.css
@@ -4,12 +4,13 @@
   align-items: center;
   height: 100vh;
   background-color: #f0f0f0;
+  box-shadow: -3px 6px 6px rgba(0, 0, 0, 0.8);
 }
 
 .chatContainer {
   background-color: #ffffff;
   border-radius: 30px 0 30px 0;
-  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.4);
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -55,6 +56,8 @@
   margin: 8px;
   border-radius: 6px;
   max-width: 70%;
+  overflow: scroll;
+  overflow-wrap: break-word;
 }
 
 .user {
@@ -73,23 +76,28 @@
   display: flex;
   gap: 10px;
   background-color: #f0f0f0;
-  height: 80px;
-
+  height: auto;
+  padding: 20px 0;
   justify-content: center;
   align-items: center;
+  position: relative;
+  bottom: 0;
+  right: 0;
+  width: 100%;
 }
 
 textarea {
   border: none;
   outline: none;
-  padding: 10px;
+  padding: 10px 16px 10px;
   border-radius: 20px;
   width: 50%;
-  height: 30px;
+  min-height: 30px;
+  height: auto;
   resize: none;
-  display: flex;
-  align-items: center;
+  overflow: hidden;
   font-size: 20px;
+  font-family: "Arial", sans-serif;
 }
 
 .sendButton {
